Fix minor layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@ body{
   border-color: rgba(0, 0, 0, 0.7);
   background-color: white;
   box-shadow: 5px 10px 10px 2px grey;
+  max-width: 70%;
 }
 
 .section {
@@ -51,7 +52,12 @@ h3 {
 .description {
   grid-column: 1 / 3;
   width: 100%;
+  gap: 5px;
 }
+.description>span:nth-child(2) {
+  min-height: 100px;
+}
+
 .description>textarea{
   width: 100%;
   min-height: 100px;
